// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inside-computed-member-expression.ng 1`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
(a|b)[c]

=====================================output=====================================
(a | b)[c]
================================================================================
`;

exports[`inside-member-expression.ng 1`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
(a|b).c

=====================================output=====================================
(a | b).c
================================================================================
`;

exports[`inside-optional-expression.ng 1`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
(a|b)?.c

=====================================output=====================================
(a | b)?.c
================================================================================
`;

exports[`inside-unary.ng 1`] = `
====================================options=====================================
parsers: ["__ng_interpolation"]
printWidth: 80
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
!(a|b)

=====================================output=====================================
!(a | b)
================================================================================
`;
